CVE-2019-17531: Updated jackson versions.

--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,8 @@
 
     <guava.version>18.0</guava.version>
     <slf4j.version>1.7.12</slf4j.version>
-    <jackson.version>2.9.5</jackson.version>
+    <jackson.version>2.9.10</jackson.version>
+    <jackson-databind.version>2.9.10.1</jackson-databind.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gpg.useagent>true</gpg.useagent>
@@ -252,7 +253,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson-databind.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
